--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.21.2",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
