--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.5.3",
     "react-icons": "^5.4.0",
     "react-native": "^0.77.1",
